Fix the extra space at the top.

--- a/server/var/www/dotmac/configuration/idiskAdminResources/styles.css
+++ b/server/var/www/dotmac/configuration/idiskAdminResources/styles.css
@@ -87,7 +87,7 @@ body {
 }
 
 #body {
-	padding:50px;
+	padding:0px;
 	padding-bottom:35px;	/* Height of the footer */
 }
 
